--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Taxfix",
   "version": "0.0.1",
   "private": true,
+  "author": "Alexander Grischuk (https://github.com/alexandr-g)",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
